--- a/style.css
+++ b/style.css
@@ -1,29 +1,30 @@
 @import url('https://fonts.googleapis.com/css?family=Poppins:200,300,400,500,600,700,800,900&display=swap');
 *
-/*{
+{
     margin: 0;
     padding: 0;
     box-sizing: border-box;
     font-family: 'Poppins', sans-serif;
-}*/
-
-.container-1 {
-    background: rgb(255, 160, 71);
-    height: 250px;
-    position: relative;
 }
 
 body {
     background: rgb(240, 248, 248);
 }
 
+.container-1 {
+    background: rgb(255, 160, 71);
+    height: 250px;
+    position: relative;
+    
+}
+
 img {
-    position: absolute;
+   position: absolute;
+   display: inline-block;
     width: 200px;
     height: 200px;
     border-radius: 50%;
     object-fit: cover;
-    overflow: hidden;
     top: 10px;
     left: 200px;
 }
@@ -35,7 +36,6 @@ h1 {
     left: 50px;
     text-align: center;
     top: 50px;
-
 }
 
 h2 {
@@ -90,6 +90,17 @@ h2 {
     {
         margin: 10px;
     }
+}
+
+@media (max-width: 480px) {
+    img {
+        float: none;
+        display: table;
+    }
+}
+
+#more {
+    display: none;
 }
 
 
