--- a/style.css
+++ b/style.css
@@ -33,9 +33,7 @@ h1 {
     color: rgba(219, 35, 35, 0.815);
     font-size: 3.5em;
     text-transform: uppercase;
-    left: 50px;
     text-align: center;
-    top: 50px;
 }
 
 h2 {
@@ -102,6 +100,53 @@ h2 {
 #more {
     display: none;
 }
+
+#myBtn {
+background-color: rgba(219, 35, 35, 0.815);
+  border-radius: 3px;
+  border: 1px solid #7aa7c7;
+  box-shadow: rgba(255, 255, 255, .7) 0 1px 0 0 inset;
+  box-sizing: border-box;
+  color: rgba(49, 43, 51, 0.815);
+
+  cursor: pointer;
+  display: inline-block;
+  font-family: -apple-system,system-ui,"Segoe UI","Liberation Sans",sans-serif;
+  font-size: 13px;
+  font-weight: 400;
+  line-height: 1.15385;
+  margin: 0;
+  outline: none;
+  padding: 8px .8em;
+  position: relative;
+  text-align: center;
+  text-decoration: none;
+  user-select: none;
+  touch-action: manipulation;
+  vertical-align: baseline;
+  white-space: nowrap;
+}
+
+
+
+#myBtn:hover,
+#myBtn:focus {
+  background-color: #b3d3ea;
+  color: #2c5777;
+}
+
+#myBtn:focus {
+  box-shadow: 0 0 0 4px rgba(0, 149, 255, .15);
+}
+
+#myBtn:active {
+  background-color: #a0c7e4;
+  box-shadow: none;
+  color: #2c5777;
+}
+
+
+
 
 
 
